test product card settings

--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -172,7 +172,7 @@
                 {{ settings.logo | image_url: width: 600 | image_tag:
                   class: 'header__heading-logo motion-reduce',
                   widths: widths,
-                  height: logo_height,
+                  height: settings.logo_height,
                   width: settings.logo_width,
                   alt: logo_alt,
                   sizes: sizes,
